gold color, sub-intro started

--- a/src/project/_variables.scss
+++ b/src/project/_variables.scss
@@ -69,6 +69,7 @@ $link-hover: darken($link, 8%);
 // -------------------------------------------- 
 
 $bfc-green: #bada55;
+$bfc-gold: #9f916f;
 $bt-blue: #0066a1;
 $bt-med-blue: #009fda;
 $bt-lt-blue: #589cc1;
