--- a/views/page-history.twig
+++ b/views/page-history.twig
@@ -2,13 +2,16 @@
 
 {% block content %}
 
-	<h1>Page History</h1>
+	<section class="page-intro">
+			<h1 class="intro-h1">History</h1>
+			<h2 class="intro-h2">We've logged thousands of miles in the fight against cancer</h2>
+			<a class="btn btn-donate">Donate Today</a>
+	</section><!-- /page-intro -->	
 	
 	<div class="content-wrapper">
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
 			<section class="article-content">
 				<h1 class="article-h1">{{post.post_title}}</h1>
-				
 				
 				{{post.post_content|raw|wpautop}}
 			</section>
