--- a/views/index.twig
+++ b/views/index.twig
@@ -25,8 +25,8 @@
 	</body>	
 
 
-<!-- 	{% for post in posts %}
+	{% for post in posts %}
 		{% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
-	{% endfor %} -->
+	{% endfor %}
 
 {% endblock %}
