--- a/views/page-history.twig
+++ b/views/page-history.twig
@@ -8,15 +8,8 @@
 			<a class="btn btn-donate">Donate Today</a>
 	</section><!-- /page-intro -->	
 	
-	<div class="content-wrapper">
-		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
-			<section class="article-content">
-				<h1 class="article-h1">{{post.post_title}}</h1>
-				
-				{{post.post_content|raw|wpautop}}
-			</section>
-
-		</article>
-	</div> <!-- /content-wrapper -->
+	{% for child in post.get_children %}
+		{{child.title}}
+	{% endfor %}
 
 {% endblock %}
