--- a/views/home.twig
+++ b/views/home.twig
@@ -10,46 +10,36 @@
 
 		<section class="page-sub-intro">
 			<div class="page-mod">
+				<div class="sub-intro-txt-mod">
 				<h3 class="sub-intro-txt">We love bikes. We hate cancer.
 				Bikes Fight Cancer is a tight-knit team of knuckleheads that ride bikes and are committed to raising money for life-saving cancer research and treatment.</h3>
+				<img class="team-signatures" src="/wp-content/themes/spokes/images/team-signatures.png">
+				</div><!-- /sub-intro-txt-mod -->
 			</div><!-- /page-mod -->	
 		</section><!-- /page-sub-intro -->	
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-			<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-			<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-			<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
 
-	{% for sponsor in sponsors.sponsors %}
-		{{sponsor.sponsor_name}}
-		{{sponsor.sponsor_link}}
-	{% endfor %}
+		<section class="raffle-tz">
+			<div class="page-mod">
+				<div class="raffle-ticket-mod">
+					Today's Raffle Winner
+				</div><!-- /raffle-ticket-mod -->				
+			</div><!-- /page-mod -->	
+		</section><!-- /raffle-tz -->
+
+		<section class="blog-feed">
+			<div class="page-mod">
+				<img class="section-icon" src="/wp-content/themes/spokes/images/icon-blog.png">
+				<h4 class="section-h1">Blog</h4>
+
+				<ul class="blog-feed-ul">
+					<li class="blog-post card-effect">
+						<div class="post-date">7.12.13</div>
+						<!-- <div class="post-date-mod"></div> -->
+						<h5 class="tz-h1">We're stoked on our new site!</h5>
+						<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket. The day the ticket is pulled determines the prize that is won. We will contact the lucky person and make sure the prize gets to you!</p>
+					</li><!-- /blog-post -->
+				</ul><!-- /blog-feed-li -->	
+			</div><!-- /page-mod -->
+		</section><!-- /blog-feed -->	
 
 {% endblock %}
