--- a/src/project/_variables.scss
+++ b/src/project/_variables.scss
@@ -70,6 +70,7 @@ $link-hover: darken($link, 8%);
 
 $bfc-green: #bada55;
 $bfc-gold: #9f916f;
+$bfc-gold-dark: #5d4e2e;
 $bt-blue: #0066a1;
 $bt-med-blue: #009fda;
 $bt-lt-blue: #589cc1;
@@ -98,7 +99,6 @@ $section-hdr-border: $bt-blue;
 // --------------------------------------------
 
 
-$freight-sans: 'freight-sans-pro';
 $bt-sans: 'PT Sans';
 $bt-serif: 'Roboto Slab';
 
@@ -106,6 +106,8 @@ $sans: $bt-sans, "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
 $serif: $bt-serif, Georgia, Times, "Times New Roman", serif;
 $mono: "Courier New", Courier, mono;
 
+$freight-sans: 'freight-sans-pro', $sans;
+$freight-txt:  'freight-text-pro';
 
 
-$body: normal 17px/27px $bt-sans;
+$body: normal 18px/120%px $freight-txt;
