--- a/src/style.scss
+++ b/src/style.scss
@@ -26,7 +26,6 @@
 
 /* ============================================= */
 
-
 /*	Universal						   			 */ 
 
 /* ============================================= */
@@ -72,8 +71,41 @@ em   	{	font-style: italic;	}
 }
 
 .page-mod {
-	padding: 150px 50px;
+	padding: 75px 50px;
 }
+
+.section-icon {
+	max-width: 45px;
+	width: 100%;
+	margin-bottom: 5px;
+}
+
+
+
+/* ============================================= */
+
+/*	Typography						   			 */ 
+
+/* ============================================= */
+
+.section-h1 {
+	text-transform: uppercase;
+	color: $bfc-gold;
+	font: 600 32px/120% $freight-sans, $sans;
+	letter-spacing: 1px;
+	margin-bottom: 50px;
+}
+
+.tz-h1 {
+	font: 600 32px/120% $freight-sans;
+	color: #000;
+}
+
+.tz-txt {
+	font: 400 20px/140% $freight-txt;
+	color: #464646;
+}
+
 
 /* ============================================= */
 
@@ -126,53 +158,224 @@ em   	{	font-style: italic;	}
 
 /* ============================================= */
 	
-	.page-intro {
-		padding: 0% 0%;
-		background: url(/wp-content/themes/spokes/images/home-hero-1.jpg) no-repeat center center;
-		background-size: 120%; //If you change this, change the number in site.js
-		max-height: 786px;
-		height: 786px;	
-		margin: 0 auto;
-		text-align: center;	
-	}
+.page-intro {
+	padding: 0% 0%;
+	background: url(/wp-content/themes/spokes/images/home-hero-1.jpg) no-repeat center center;
+	background-size: 120%; //If you change this, change the number in site.js
+	max-height: 786px;
+	height: 786px;	
+	margin: 0 auto;
+	text-align: center;	
+}
 
-	.intro-h1 {
-		max-width: 1080px;
-		width: 100%;
-		text-indent: -3000px;
-		background: url(/wp-content/themes/spokes/images/home-intro-txt.png) no-repeat 50% 100%;
-		margin: 0 auto;
-		text-align: center;	
-		height: 110px;
-		padding-top: 400px;
-		background-size: 1080px;
-		margin-bottom: 25px;
-	}
+.intro-h1 {
+	max-width: 1080px;
+	width: 100%;
+	text-indent: -3000px;
+	background: url(/wp-content/themes/spokes/images/home-intro-txt.png) no-repeat 50% 100%;
+	margin: 0 auto;
+	text-align: center;	
+	height: 110px;
+	padding-top: 400px;
+	background-size: 1080px;
+	margin-bottom: 25px;
+}
 
-	.intro-h2 {
-		font: 600 29px/120% $freight-sans;
-		text-transform: uppercase;
-		letter-spacing: 2px;
-		color: #fff;	
-		margin: 0 auto;
-		text-align: center;	
-		margin-bottom: 65px;
-	}
+.intro-h2 {
+	font: 600 29px/120% $freight-sans;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	color: #fff;	
+	margin: 0 auto;
+	text-align: center;	
+	margin-bottom: 65px;
+}
 
-	.page-sub-intro {
-		background: url(/wp-content/themes/spokes/images/home-sub-intro.png) no-repeat 13% -10%;
-		max-height: 575px;
-		height: 575px;
-		@include pie-clearfix;
-	}
+.page-sub-intro {
+	background: url(/wp-content/themes/spokes/images/home-sub-intro.png) no-repeat 13% -10%;
+	max-height: 525px;
+	height: 525px;
+	@include pie-clearfix;
+}
 
-	.sub-intro-txt {
-		font: 600 32px/120% $freight-sans;
-		max-width: 780px;
-		width: 100%;
-		float: right;
-	}
+.sub-intro-txt-mod {
+	max-width: 780px;
+	width: 100%;
+	float: right;	
+}
 
+.sub-intro-txt {
+	font: 600 32px/125% $freight-sans;
+	max-width: 780px;
+	width: 100%;
+	margin-bottom: 25px;
+	color: $bfc-gold;
+}
+
+.team-signatures {
+	max-width: 750px;
+	width: 750px;
+}
+
+
+/* ============================================= */
+
+/*	Raffle-TZ     						   		 */ 
+
+/* ============================================= */
+
+
+.raffle-tz {
+	background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
+	height: 515px;
+	border-top: 1px solid;
+	border-bottom: 1px solid;	
+	border-color: #eee;
+}	
+
+.raffle-ticket-mod {
+	border: 1px solid;
+	border-color: $bfc-gold-dark;
+	background-color: $bfc-gold;
+    @include border-radius(12px);
+    max-width: 780px;
+    width: 100%;
+    max-height: 355px;
+    height: 355px;
+    padding: 65px;
+ 	background: url(/wp-content/themes/spokes/images/bg-raffle.jpg) no-repeat 50% 50%;
+	background-size: 101%; 
+	margin: 0 auto;
+	text-align: center;  	
+}
+
+/* ============================================= */
+
+/*	Blog-Feed    						   		 */ 
+
+/* ============================================= */
+
+.blog-feed {
+	margin: 0 auto;
+	text-align: center;
+}
+
+.blog-feed-ul {
+}
+
+.blog-post {
+	margin: 0 auto;
+	border: 1px solid;
+	border-color: #eee;
+	border-bottom-color: #ddd;
+	max-width: 768px;
+	width: 100%;
+	max-height: 300px;
+	text-align: left;
+	padding: 35px 35px 50px 165px;
+	position: relative;
+	background-color: #fff;
+	position: relative;
+}
+
+.post-date-mod {
+	background: url(/wp-content/themes/spokes/images/bg-dots.png) 50% 50%;
+	background-size: 100%;
+	width: 131px;
+	height: 260px;
+}
+
+.post-date {
+	background-color: $bfc-gold;
+	padding: 10px;
+	height: 42px;
+	width: 116px;
+	color: #fff;
+	text-align: center;
+	position: absolute;
+	top: 44px;
+	left: -20px;
+	font: 400 20px/120% $freight-sans;
+}
+
+
+/* ============================================= */
+
+/*	Footer	    						   		 */ 
+
+/* ============================================= */
+
+footer {
+	height: 515px;
+	background-color: #222;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.ftr-logo {
+	max-width: 515px;
+	width: 100%;
+	margin-bottom: 25px;
+}
+
+.sponsors {
+	height: 515px;
+	background-color: #f5f5f3;
+	margin: 0 auto;
+	text-align: center;	
+
+	.section-h1 {
+		color: #000;
+	}	
+}
+
+.sponsors-ul {
+	display: inline-block;
+	margin-right: 10%;
+	max-width: 280px;
+	text-align: left;
+	vertical-align: top;
+
+	&:last-child {
+		margin-right: 0px;
+	}
+}
+
+.sponsors-item {
+	font: 400 18px/160% $freight-sans;
+}
+
+
+
+/* ============================================= */
+
+/*	Special FX    						   		 */ 
+
+/* ============================================= */
+
+.card-effect {
+  position: relative;
+}
+
+.card-effect:before, .card-effect:after {
+	z-index: -1;
+	position: absolute;
+	content: "";
+	bottom: 15px;
+	left: 10px;
+	width: 50%;
+	top: 80%;
+	max-width:300px;
+	background: #777;
+	@include box-shadow(0 15px 10px rgba(0, 0, 0, 0.2));
+	@include transform(rotate(-3deg));  
+}
+
+.card-effect:after {
+	@include transform(rotate(3deg));
+	right: 10px;
+	left: auto;
+}
 
 
 /* --------------------------------------------- */
