--- a/style.css
+++ b/style.css
@@ -684,28 +684,28 @@ input[type="search"]::-webkit-search-results-decoration {
 /* ============================================= */
 /*	Universal						   			 */
 /* ============================================= */
-/* line 34, src/style.scss */
+/* line 33, src/style.scss */
 body {
   overflow: hidden;
 }
 
-/* line 39, src/style.scss */
+/* line 38, src/style.scss */
 a {
   text-decoration: none;
   color: inherit;
 }
 
-/* line 40, src/style.scss */
+/* line 39, src/style.scss */
 strong {
   font-weight: bold;
 }
 
-/* line 41, src/style.scss */
+/* line 40, src/style.scss */
 em {
   font-style: italic;
 }
 
-/* line 44, src/style.scss */
+/* line 43, src/style.scss */
 .btn-donate {
   margin: 0 auto;
   text-align: center;
@@ -718,7 +718,7 @@ em {
   box-shadow: inset #87a722 0px 0px 30px;
 }
 
-/* line 54, src/style.scss */
+/* line 53, src/style.scss */
 .btn-donate:after {
   content: "";
   position: absolute;
@@ -738,7 +738,7 @@ em {
   transition: none;
 }
 
-/* line 67, src/style.scss */
+/* line 66, src/style.scss */
 .btn-donate:hover:after {
   width: 100%;
   height: 100%;
@@ -749,15 +749,46 @@ em {
   transition: all 0.5s ease-out;
 }
 
-/* line 74, src/style.scss */
+/* line 73, src/style.scss */
 .page-mod {
-  padding: 150px 50px;
+  padding: 75px 50px;
+}
+
+/* line 77, src/style.scss */
+.section-icon {
+  max-width: 45px;
+  width: 100%;
+  margin-bottom: 5px;
+}
+
+/* ============================================= */
+/*	Typography						   			 */
+/* ============================================= */
+/* line 91, src/style.scss */
+.section-h1 {
+  text-transform: uppercase;
+  color: #9f916f;
+  font: 600 32px/120% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif, "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
+  letter-spacing: 1px;
+  margin-bottom: 50px;
+}
+
+/* line 99, src/style.scss */
+.tz-h1 {
+  font: 600 32px/120% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
+  color: #000;
+}
+
+/* line 104, src/style.scss */
+.tz-txt {
+  font: 400 20px/140% "freight-text-pro";
+  color: #464646;
 }
 
 /* ============================================= */
 /*	nav     						   			 */
 /* ============================================= */
-/* line 84, src/style.scss */
+/* line 116, src/style.scss */
 .header {
   position: fixed;
   top: 0px;
@@ -765,12 +796,12 @@ em {
   padding: 0px 35px;
 }
 
-/* line 91, src/style.scss */
+/* line 123, src/style.scss */
 #access {
   float: right;
   padding-top: 30px;
 }
-/* line 96, src/style.scss */
+/* line 128, src/style.scss */
 #access #menu-main-nav > li {
   display: -moz-inline-stack;
   display: inline-block;
@@ -781,21 +812,21 @@ em {
   background-color: #000;
   color: #fff;
   padding: 2px 6px;
-  font: 600 15px/120% "freight-sans-pro";
+  font: 600 15px/120% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   text-transform: uppercase;
   letter-spacing: 1px;
   margin-right: 2px;
 }
-/* line 106, src/style.scss */
+/* line 138, src/style.scss */
 #access #menu-main-nav > li:last-child {
   margin-right: 0px;
 }
-/* line 110, src/style.scss */
+/* line 142, src/style.scss */
 #access #menu-main-nav > li:hover {
   color: #bada55;
 }
 
-/* line 117, src/style.scss */
+/* line 149, src/style.scss */
 .nav-logo {
   max-width: 80px;
   width: 100%;
@@ -804,7 +835,7 @@ em {
 /* ============================================= */
 /*	Page-Intro     						   		 */
 /* ============================================= */
-/* line 129, src/style.scss */
+/* line 161, src/style.scss */
 .page-intro {
   padding: 0% 0%;
   background: url(/wp-content/themes/spokes/images/home-hero-1.jpg) no-repeat center center;
@@ -815,7 +846,7 @@ em {
   text-align: center;
 }
 
-/* line 139, src/style.scss */
+/* line 171, src/style.scss */
 .intro-h1 {
   max-width: 1080px;
   width: 100%;
@@ -829,9 +860,9 @@ em {
   margin-bottom: 25px;
 }
 
-/* line 152, src/style.scss */
+/* line 184, src/style.scss */
 .intro-h2 {
-  font: 600 29px/120% "freight-sans-pro";
+  font: 600 29px/120% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
   color: #fff;
@@ -840,11 +871,11 @@ em {
   margin-bottom: 65px;
 }
 
-/* line 162, src/style.scss */
+/* line 194, src/style.scss */
 .page-sub-intro {
   background: url(/wp-content/themes/spokes/images/home-sub-intro.png) no-repeat 13% -10%;
-  max-height: 575px;
-  height: 575px;
+  max-height: 525px;
+  height: 525px;
   *zoom: 1;
 }
 /* line 38, ../../../../Applications/LiveReload.app/Contents/Resources/SASS.lrplugin/lib/compass/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
@@ -854,12 +885,194 @@ em {
   clear: both;
 }
 
-/* line 169, src/style.scss */
-.sub-intro-txt {
-  font: 600 32px/120% "freight-sans-pro";
+/* line 201, src/style.scss */
+.sub-intro-txt-mod {
   max-width: 780px;
   width: 100%;
   float: right;
+}
+
+/* line 207, src/style.scss */
+.sub-intro-txt {
+  font: 600 32px/125% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
+  max-width: 780px;
+  width: 100%;
+  margin-bottom: 25px;
+  color: #9f916f;
+}
+
+/* line 215, src/style.scss */
+.team-signatures {
+  max-width: 750px;
+  width: 750px;
+}
+
+/* ============================================= */
+/*	Raffle-TZ     						   		 */
+/* ============================================= */
+/* line 228, src/style.scss */
+.raffle-tz {
+  background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
+  height: 515px;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+  border-color: #eee;
+}
+
+/* line 236, src/style.scss */
+.raffle-ticket-mod {
+  border: 1px solid;
+  border-color: #5d4e2e;
+  background-color: #9f916f;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  -ms-border-radius: 12px;
+  -o-border-radius: 12px;
+  border-radius: 12px;
+  max-width: 780px;
+  width: 100%;
+  max-height: 355px;
+  height: 355px;
+  padding: 65px;
+  background: url(/wp-content/themes/spokes/images/bg-raffle.jpg) no-repeat 50% 50%;
+  background-size: 101%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+/* ============================================= */
+/*	Blog-Feed    						   		 */
+/* ============================================= */
+/* line 258, src/style.scss */
+.blog-feed {
+  margin: 0 auto;
+  text-align: center;
+}
+
+/* line 266, src/style.scss */
+.blog-post {
+  margin: 0 auto;
+  border: 1px solid;
+  border-color: #eee;
+  border-bottom-color: #ddd;
+  max-width: 768px;
+  width: 100%;
+  max-height: 300px;
+  text-align: left;
+  padding: 35px 35px 50px 165px;
+  position: relative;
+  background-color: #fff;
+  position: relative;
+}
+
+/* line 281, src/style.scss */
+.post-date-mod {
+  background: url(/wp-content/themes/spokes/images/bg-dots.png) 50% 50%;
+  background-size: 100%;
+  width: 131px;
+  height: 260px;
+}
+
+/* line 288, src/style.scss */
+.post-date {
+  background-color: #9f916f;
+  padding: 10px;
+  height: 42px;
+  width: 116px;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  top: 44px;
+  left: -20px;
+  font: 400 20px/120% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
+}
+
+/* ============================================= */
+/*	Footer	    						   		 */
+/* ============================================= */
+/* line 308, src/style.scss */
+footer {
+  height: 515px;
+  background-color: #222;
+  margin: 0 auto;
+  text-align: center;
+}
+
+/* line 315, src/style.scss */
+.ftr-logo {
+  max-width: 515px;
+  width: 100%;
+  margin-bottom: 25px;
+}
+
+/* line 321, src/style.scss */
+.sponsors {
+  height: 515px;
+  background-color: #f5f5f3;
+  margin: 0 auto;
+  text-align: center;
+}
+/* line 327, src/style.scss */
+.sponsors .section-h1 {
+  color: #000;
+}
+
+/* line 332, src/style.scss */
+.sponsors-ul {
+  display: inline-block;
+  margin-right: 10%;
+  max-width: 280px;
+  text-align: left;
+  vertical-align: top;
+}
+/* line 339, src/style.scss */
+.sponsors-ul:last-child {
+  margin-right: 0px;
+}
+
+/* line 344, src/style.scss */
+.sponsors-item {
+  font: 400 18px/160% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
+}
+
+/* ============================================= */
+/*	Special FX    						   		 */
+/* ============================================= */
+/* line 356, src/style.scss */
+.card-effect {
+  position: relative;
+}
+
+/* line 360, src/style.scss */
+.card-effect:before, .card-effect:after {
+  z-index: -1;
+  position: absolute;
+  content: "";
+  bottom: 15px;
+  left: 10px;
+  width: 50%;
+  top: 80%;
+  max-width: 300px;
+  background: #777;
+  -webkit-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 15px 10px rgba(0, 0, 0, 0.2);
+  -webkit-transform: rotate(-3deg);
+  -moz-transform: rotate(-3deg);
+  -ms-transform: rotate(-3deg);
+  -o-transform: rotate(-3deg);
+  transform: rotate(-3deg);
+}
+
+/* line 374, src/style.scss */
+.card-effect:after {
+  -webkit-transform: rotate(3deg);
+  -moz-transform: rotate(3deg);
+  -ms-transform: rotate(3deg);
+  -o-transform: rotate(3deg);
+  transform: rotate(3deg);
+  right: 10px;
+  left: auto;
 }
 
 /* --------------------------------------------- */
