--- a/src/style.scss
+++ b/src/style.scss
@@ -345,6 +345,9 @@ footer {
 	font: 400 18px/160% $freight-sans;
 }
 
+.ftr-logo-bike {
+	position:
+}
 
 
 /* ============================================= */
