--- a/views/footer.twig
+++ b/views/footer.twig
@@ -1,52 +1,4 @@
-{% for sponsor in sponsors.sponsors %}
-	<!-- {{sponsor.sponsor_name}}
-	{{sponsor.sponsor_link}} -->
-{% endfor %}
-
-	<section class="sponsors">
-		<div class="page-mod">
-		<img class="ftr-logo-bike" src="/wp-content/themes/spokes/images/ftr-logo-bike.png"/>
-		<h4 class="section-h1">Our Business Sponsors</h4>
-		    <ul class="sponsors-ul">
-		    	<li class="sponsors-item">Metamorphosis Massage</li>
-		    	<li class="sponsors-item">Robert Charles Photography</li>
-		    	<li class="sponsors-item">Dream Catchers</li>
-		    	<li class="sponsors-item">Sutters Jewelers</li>
-		    	<li class="sponsors-item">April Eve Images</li>
-		    	<li class="sponsors-item">Diamond Junction Bowling Lanes</li>
-		    	<li class="sponsors-item">Palmer Police Chief Robert Frydryk</li>
-		    	<li class="sponsors-item">Double-A-Plastics</li>
-		    	<li class="sponsors-item">The Button Box</li>
-		    	<li class="sponsors-item">Sherman & Frydryk</li>   	    	
-		    </ul>	
-
-		    <ul class="sponsors-ul">
-		    	<li class="sponsors-item">Miss Piggy's</li>
-		    	<li class="sponsors-item">Maple Leaf Distribution Services</li>
-		    	<li class="sponsors-item">The Magic Lantern</li>
-		    	<li class="sponsors-item">Nick’s Nest</li>
-				<li class="sponsors-item">Metamorphosis Massage</li>
-		    	<li class="sponsors-item">Robert Charles Photography</li>
-		    	<li class="sponsors-item">Dream Catchers</li>
-		    	<li class="sponsors-item">Sutters Jewelers</li>
-		    	<li class="sponsors-item">April Eve Images</li>
-		    	<li class="sponsors-item">Diamond Junction Bowling Lanes</li>
-		    </ul>
-
-		    <ul class="sponsors-ul">
-				<li class="sponsors-item">Palmer Police Chief Robert Frydryk</li>
-		    	<li class="sponsors-item">Double-A-Plastics</li>
-		    	<li class="sponsors-item">The Button Box</li>
-		    	<li class="sponsors-item">Sherman & Frydryk</li>
-				<li class="sponsors-item">Metamorphosis Massage</li>
-		    	<li class="sponsors-item">Robert Charles Photography</li>
-		    	<li class="sponsors-item">Dream Catchers</li>
-		    	<li class="sponsors-item">Sutters Jewelers</li>
-		    	<li class="sponsors-item">April Eve Images</li>
-		    	<li class="sponsors-item">Diamond Junction Bowling Lanes</li>	
-		    </ul>
-		</div> <!-- /page-mod -->	 
-	</section> <!-- /sponsors -->	    
+{% include "sponsors.twig" %}
 
 <footer id="footer">
 	<div class="page-mod">
