--- a/views/home.twig
+++ b/views/home.twig
@@ -31,14 +31,29 @@
 				<img class="section-icon" src="/wp-content/themes/spokes/images/icon-blog.png">
 				<h4 class="section-h1">Blog</h4>
 
-				<ul class="blog-feed-ul">
-					<li class="blog-post card-effect">
+				<div class="blog-feed-mod">
+					<article class="blog-post-tz card-effect">
 						<div class="post-date">7.12.13</div>
 						<!-- <div class="post-date-mod"></div> -->
 						<h5 class="tz-h1">We're stoked on our new site!</h5>
 						<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket. The day the ticket is pulled determines the prize that is won. We will contact the lucky person and make sure the prize gets to you!</p>
-					</li><!-- /blog-post -->
-				</ul><!-- /blog-feed-li -->	
+					</article><!-- /blog-post -->
+
+					<article class="blog-post-tz card-effect">
+						<div class="post-date">7.12.13</div>
+						<!-- <div class="post-date-mod"></div> -->
+						<h5 class="tz-h1">We're stoked on our new site!</h5>
+						<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket. The day the ticket is pulled determines the prize that is won. We will contact the lucky person and make sure the prize gets to you!</p>
+					</article><!-- /blog-post -->
+
+					<article class="blog-post-tz card-effect">
+						<div class="post-date">7.12.13</div>
+						<!-- <div class="post-date-mod"></div> -->
+						<h5 class="tz-h1">We're stoked on our new site!</h5>
+						<p class="tz-txt">For every $20 in a personal donation to the PMC for our team, we will put a ticket in our official “Raffle Bowl” with the donor’s name. Each day during the month of July, we will randomly draw a ticket. The day the ticket is pulled determines the prize that is won. We will contact the lucky person and make sure the prize gets to you!</p>
+					</article><!-- /blog-post -->
+				</div>
+
 			</div><!-- /page-mod -->
 		</section><!-- /blog-feed -->	
 
