--- a/views/home.twig
+++ b/views/home.twig
@@ -21,7 +21,9 @@
 		<section class="raffle-tz">
 			<div class="page-mod">
 				<div class="raffle-ticket-mod">
+					<div class="raffle-inside">
 					Today's Raffle Winner
+					</div><!-- /raffle-inside -->	
 				</div><!-- /raffle-ticket-mod -->				
 			</div><!-- /page-mod -->	
 		</section><!-- /raffle-tz -->
