--- a/views/sponsors.twig
+++ b/views/sponsors.twig
@@ -3,7 +3,7 @@
 		<div class="sponsors-mod">
 			<div class="ui-block-1">
 				<img class="ftr-logo-bike" src="/wp-content/themes/spokes/images/ftr-logo-bike.png"/>
-				<a class="btn btn-large">Donate</a>
+				<a class="btn btn-large">Join The List</a>
 			</div>
 
 			<div class="ui-block-2">
