--- a/views/footer.twig
+++ b/views/footer.twig
@@ -9,4 +9,7 @@
 			<li class="contact-li-item">team@bikesfightcancer.org</li>
 		</ul>		
 	</div><!-- /page-mod -->
+	<div class="site-credit">
+		Site by Upstatement
+	</div><!-- /site-credit -->	
 </footer>
