--- a/views/home.twig
+++ b/views/home.twig
@@ -3,9 +3,9 @@
 {% block content %}
 
 		<section class="page-intro">
-			<h1 class="intro-h1">Bikes Fight Cancer</h1>
+			<h1 class="intro-h1 home-intro">Bikes Fight Cancer</h1>
 			<h2 class="intro-h2">Our Goal: Raise $26,000 for the Pan-Mass Challenge</h2>
-			<a class="btn btn-donate">Donate Today</a>
+			<a class="btn btn-large btn-donate">Donate Today</a>
 		</section><!-- /page-intro -->	
 
 		<section class="page-sub-intro">
@@ -22,7 +22,13 @@
 			<div class="page-mod">
 				<div class="raffle-ticket-mod">
 					<div class="raffle-inside">
-					Today's Raffle Winner
+						<h4 class="section-h1 raffle-hdr">Today's Raffle Winner</h4>
+						<div class="raffle-name-mod">
+							<div class="raffle-name-title">Name:</div> <div class="raffle-name">Warren Izyk</div>
+						</div><!-- /raffle-name-mod -->	
+						<div class="raffle-prize-mod">
+							<div class="raffle-prize-title">Prize:</div> <div class="raffle-prize">Red Sox Tickets</div>
+						</div><!-- /raffle-prize-mod -->
 					</div><!-- /raffle-inside -->	
 				</div><!-- /raffle-ticket-mod -->				
 			</div><!-- /page-mod -->	
