--- a/views/page-history.twig
+++ b/views/page-history.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
 	<section class="page-intro">
-			<h1 class="intro-h1">History</h1>
+			<h1 class="intro-h1 history-intro">History</h1>
 			<h2 class="intro-h2">We've logged thousands of miles in the fight against cancer</h2>
 			<a class="btn btn-donate">Donate Today</a>
 	</section><!-- /page-intro -->	
